--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -181,8 +181,14 @@
     <property name="title">
      <string>File</string>
     </property>
+    <widget class="QMenu" name="menuRecent">
+     <property name="title">
+      <string>Recent</string>
+     </property>
+    </widget>
     <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
+    <addaction name="menuRecent"/>
     <addaction name="actionSave_As"/>
     <addaction name="actionSave"/>
     <addaction name="actionQuit"/>
